2005-10-06  Bob Halley  <halley@dnspython.org>

	* dns/name.py: Added the parent() method, which returns the
	  parent of a name.

2005-10-01  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py: Added zone_for_name() helper, which returns
	  the name of the zone which contains the specified name.

	* dns/resolver.py: Added get_default_resolver(), which returns
	  the default resolver, initializing it if necessary.

2005-09-29  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py (Resolver._compute_timeout): If time goes
	  backwards a little bit, ignore it.

2005-07-31  Bob Halley  <halley@dnspython.org>

	* (Version 1.3.4 released)

2005-07-31  Bob Halley  <halley@dnspython.org>

	* dns/message.py (make_response): Trying to respond to a response
	  threw a NameError while trying to throw a FormErr since it used
	  the wrong name for the FormErr exception.

	* dns/query.py (_connect): We needed to ignore EALREADY too.

	* dns/query.py: Optional "source" and "source_port" parameters
	  have been added to udp(), tcp(), and xfr().  Thanks to Ralf
	  Weber for suggesting the change and providing a patch.

2005-06-05  Bob Halley  <halley@dnspython.org>

	* dns/query.py: The requirement that the "where" parameter be
	  an IPv4 or IPv6 address is now documented.

2005-06-04  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py: The resolver now does exponential backoff
	  each time it runs through all of the nameservers.

	* dns/resolver.py: rcodes which indicate a nameserver is likely
	  to be a "permanent failure" for a query cause the nameserver
	  to be removed from the mix for that query.

2005-01-30  Bob Halley  <halley@dnspython.org>

	* (Version 1.3.3 released)

2004-10-25  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/ANY/TXT.py (TXT.from_text): The masterfile parser
	incorrectly rejected TXT records where a value was not quoted.

2004-10-11  Bob Halley  <halley@dnspython.org>

	* dns/message.py: Added make_response(), which creates a skeletal