@@ -1,3 +1,9 @@
+2005-10-12  Bob Halley  <halley@dnspython.org>
+
+	* dns/zone.py: Zone.iterate_rdatasets() and Zone.iterate_rdatas()
+	  did apply a default rdtype of dns.rdatatype.ANY as their
+	  docstrings said they did.  They now do.
+
 2005-10-06  Bob Halley  <halley@dnspython.org>
 
 	* dns/name.py: Added the parent() method, which returns the
